--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************************************************
-Theme Name: Platinum Portfolios
-Theme URI: http://github.com/pfgl/pp
-Description: The new Warnes Anderton theme.
+Theme Name: AJ
+Theme URI: http://github.com/pfgl/aj
+Description: The new Austyn James theme.
 Author: Jack Machin
 Author URI: https://www.jackmach.in
 Version: 1.0
